Updated Social buttons of FA. Updated VMSL utils for new provider.